Add project  Files

--- a/views/addbooks/add.ejs
+++ b/views/addbooks/add.ejs
@@ -125,7 +125,11 @@
                 name="books[image]"
                 class="form-control"
                 id="image"
+                required
               />
+              <div class="invalid-feedback">
+                Enter your contact number
+               </div>
             </div>
             <div class="mb-3">
               <label for="contact" class="form-label">Contact Number</label>
