Add project  Files

--- a/views/addbooks/add.ejs
+++ b/views/addbooks/add.ejs
@@ -128,7 +128,7 @@
                 required
               />
               <div class="invalid-feedback">
-                Enter your contact number
+                Add a image
                </div>
             </div>
             <div class="mb-3">
