--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -52,14 +52,12 @@
   }
 
   .fa-square-instagram {
-    background: radial-gradient(
-      circle at 30% 107%,
-      #fdf497 0%,
-      #fdf497 5%,
-      #fd5949 45%,
-      #d6249f 60%,
-      #285aeb 90%
-    );
+    background: radial-gradient(circle at 30% 107%,
+        #fdf497 0%,
+        #fdf497 5%,
+        #fd5949 45%,
+        #d6249f 60%,
+        #285aeb 90%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -82,18 +80,16 @@
     <div class="footer-info">
       <div class="f-info">
         <div class="f-info-socials">
-          <a
-            href="https://www.facebook.com/mohit.kumarthakur.3958?mibextid=ZbWKwL "
-            ><i class="fa-brands fa-square-facebook"></i> </a
-          ><a href="https://www.instagram.com/mohit._.thakur._.07/"
-            ><i class="fa-brands fa-square-instagram"></i>
+          <a href="https://www.facebook.com/mohit.kumarthakur.3958?mibextid=ZbWKwL "><i
+              class="fa-brands fa-square-facebook"></i> </a><a href="https://www.instagram.com/mohit._.thakur._.07/"><i
+              class="fa-brands fa-square-instagram"></i>
           </a>
         </div>
-        <div class="f-info-brand">&copy; Book Hub private limited</div>
+        <div class="f-info-brand">&copy; Book Hub V2.0.0</div>
       </div>
       <p>Contact: mohitkumart19@gmail.com</p>
       <p>Phone: 88945 82454</p>
-      <P><i>made with love 	&hearts;</i></P>
+      <P><i>made with love &hearts;</i></P>
     </div>
   </div>
 </footer>
