--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -1,121 +1,123 @@
 <% layout('/layouts/boilerplate') -%>
 
-<div class="home">
-  <div class="home-view">
-    <div class="title">
-      <h1>Book Hub</h1>
-      <p>"Where every book find a new home"</p>
+  <div class="home">
+    <div class="home-view">
+      <div class="title">
+        <div style="padding: 10px;  font-size: 1.2rem; color: #ffffff;">
+          <marquee behavior="scroll" direction="left" scrollamount="9">
+            *Get your book up to 70% discount!
+          </marquee>
+        </div>
+        <h1>Book Hub</h1>
+        <p>"Where every book find a new home"</p>
+        <div class="find-btn">
+          <button type="button" class="btn btn-warning">
+            <a href="/explorebooks">find your books <i class="fa-solid fa-magnifying-glass"></i></a>
+          </button>
+        </div>
+      </div>
+    </div>
 
-      <div class="find-btn">
-        <button type="button" class="btn btn-warning">
-          <a href="/explorebooks"
-            >find your books <i class="fa-solid fa-magnifying-glass"></i
-          ></a>
-        </button>
-      </div>
+    <div class="border">
+      <hr>
     </div>
-  </div>
 
-  <div class="border"><hr></div>
-
-  <!-- cards -->
-  <div class="card-container">
-    <div class="cards card-1">
-      <div class="card-img">
-        <img
-          src="https://media.istockphoto.com/id/1448709792/photo/profile-shot-of-a-woman-giving-a-book.jpg?s=2048x2048&w=is&k=20&c=Q63EGkzVvM6vMrZz8h3BCOU3SVSXwNfB2OCOQ9hS1R0="
-          alt="image not found"
-        />
+    <!-- cards -->
+    <div class="card-container">
+      <div class="cards card-1">
+        <div class="card-img">
+          <img
+            src="https://media.istockphoto.com/id/1448709792/photo/profile-shot-of-a-woman-giving-a-book.jpg?s=2048x2048&w=is&k=20&c=Q63EGkzVvM6vMrZz8h3BCOU3SVSXwNfB2OCOQ9hS1R0="
+            alt="image not found" />
+        </div>
+        <div class="card-content">
+          <h3>What is bookHub?</h3>
+          <p>
+            "BookHub" is your go-to platform for facilitating seamless book
+            exchanges among students. Whether you're looking to pass on textbooks
+            you no longer need or searching for required course materials at
+            affordable prices, "BookHub" connects sellers with buyers
+            effortlessly. With its intuitive interface and robust features,
+            "BookHub" streamlines the process of browsing, negotiating, and
+            finalizing book exchanges within the student community. Join "BookHub"
+            today and embark on a journey of hassle-free book swapping!
+          </p>
+        </div>
       </div>
-      <div class="card-content">
-        <h3>What is bookHub?</h3>
-        <p>
-          "BookHub" is your go-to platform for facilitating seamless book
-          exchanges among students. Whether you're looking to pass on textbooks
-          you no longer need or searching for required course materials at
-          affordable prices, "BookHub" connects sellers with buyers
-          effortlessly. With its intuitive interface and robust features,
-          "BookHub" streamlines the process of browsing, negotiating, and
-          finalizing book exchanges within the student community. Join "BookHub"
-          today and embark on a journey of hassle-free book swapping!
-        </p>
-      </div>
-    </div>
-    <div class="cards card-2">
-      <div class="card-img">
-        <img
-          src="https://media.istockphoto.com/id/1498171824/photo/confused-man-thinking-and-why-face-in-studio-white-background-and-doubt-of-ideas-planning-and.jpg?s=2048x2048&w=is&k=20&c=3ZDX7QELHxBjy0QPZotFcOANAq1sYTXDG5r65ESTA3s="
-          alt="image not found"
-        />
-      </div>
-      <div class="card-content">
-        <h3>Why bookHub?</h3>
-        <p>
-          "BookHub" serves as the bridge between students who have books to sell
-          and those in search of affordable study materials. Through "BookLink,"
-          users can seamlessly connect with sellers, browse through a diverse
-          range of books, and negotiate deals directly. With its user-friendly
-          interface and robust features, "BookHub" makes buying and selling
-          textbooks and literature within the student community effortless and
-          efficient. Join "BookLink" today and experience the convenience of
-          connecting with your peers for your book needs!
-        </p>
+      <div class="cards card-2">
+        <div class="card-img">
+          <img
+            src="https://media.istockphoto.com/id/1498171824/photo/confused-man-thinking-and-why-face-in-studio-white-background-and-doubt-of-ideas-planning-and.jpg?s=2048x2048&w=is&k=20&c=3ZDX7QELHxBjy0QPZotFcOANAq1sYTXDG5r65ESTA3s="
+            alt="image not found" />
+        </div>
+        <div class="card-content">
+          <h3>Why bookHub?</h3>
+          <p>
+            "BookHub" serves as the bridge between students who have books to sell
+            and those in search of affordable study materials. Through "BookLink,"
+            users can seamlessly connect with sellers, browse through a diverse
+            range of books, and negotiate deals directly. With its user-friendly
+            interface and robust features, "BookHub" makes buying and selling
+            textbooks and literature within the student community effortless and
+            efficient. Join "BookLink" today and experience the convenience of
+            connecting with your peers for your book needs!
+          </p>
+        </div>
       </div>
     </div>
-  </div>
-  <br /><br />
-  <div class="it-works">
-    <h4>Here's how it works</h4>
-    <hr />
-  </div>
-  <br />
-  <div class="card-container-2">
-    <div class="cards-2 card-3">
-      <div class="card-info">
-        <h5><i class="fa-solid fa-book-open-reader"></i> Book Listing</h5>
-        <hr>
-        <p>
-          Users can easily list their books on Book Hub by providing essential
-          details such as title, description, author, price, and image. This
-          information helps create a comprehensive listing that attracts
-          potential buyers.
-        </p>
-      </div>
+    <br /><br />
+    <div class="it-works">
+      <h4>Here's how it works</h4>
+      <hr />
     </div>
-    <div class="cards-2 card-4">
-      <div class="card-info">
-        <h5><i class="fa-solid fa-user"></i> User Profiles</h5>
-        <hr>
-        <p>
-          Each user has a profile on Book Hub where they can manage their listed
-          books and interact with other users. User profiles serve as a hub for
-          connecting with the Book Hub community.
-        </p>
+    <br />
+    <div class="card-container-2">
+      <div class="cards-2 card-3">
+        <div class="card-info">
+          <h5><i class="fa-solid fa-book-open-reader"></i> Book Listing</h5>
+          <hr>
+          <p>
+            Users can easily list their books on Book Hub by providing essential
+            details such as title, description, author, price, and image. This
+            information helps create a comprehensive listing that attracts
+            potential buyers.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="cards-2 card-5">
-      <div class="card-info">
-        <h5><i class="fa-solid fa-magnifying-glass"></i> Book Discovery</h5>
-        <hr>
-        <p>
-          Book Hub employs various features to facilitate book discovery and
-          interaction among users. This includes features like search
-          functionality, category browsing, and personalized recommendations
-          based on user preferences and browsing history
-        </p>
+      <div class="cards-2 card-4">
+        <div class="card-info">
+          <h5><i class="fa-solid fa-user"></i> User Profiles</h5>
+          <hr>
+          <p>
+            Each user has a profile on Book Hub where they can manage their listed
+            books and interact with other users. User profiles serve as a hub for
+            connecting with the Book Hub community.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="cards-2 card-6">
-      <div class="card-info">
-        <h5><i class="fa-solid fa-paperclip"></i> Connect with Owners</h5>
-        <hr>
-        <p>
-          Book Hub facilitates direct communication between buyers and sellers
-          by providing the option to contact the book owner via phone number.
-          This feature allows users to ask questions, negotiate prices, or
-          arrange meetups for book exchanges.
-        </p>
+      <div class="cards-2 card-5">
+        <div class="card-info">
+          <h5><i class="fa-solid fa-magnifying-glass"></i> Book Discovery</h5>
+          <hr>
+          <p>
+            Book Hub employs various features to facilitate book discovery and
+            interaction among users. This includes features like search
+            functionality, category browsing, and personalized recommendations
+            based on user preferences and browsing history
+          </p>
+        </div>
+      </div>
+      <div class="cards-2 card-6">
+        <div class="card-info">
+          <h5><i class="fa-solid fa-paperclip"></i> Connect with Owners</h5>
+          <hr>
+          <p>
+            Book Hub facilitates direct communication between buyers and sellers
+            by providing the option to contact the book owner via phone number.
+            This feature allows users to ask questions, negotiate prices, or
+            arrange meetups for book exchanges.
+          </p>
+        </div>
       </div>
     </div>
   </div>
-</div>
