new updates on home page

--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -3,11 +3,6 @@
   <div class="home">
     <div class="home-view">
       <div class="title">
-        <div style="padding: 10px;  font-size: 1.2rem; color: #ffffff;">
-          <marquee behavior="scroll" direction="left" scrollamount="9">
-            *Get your book up to 70% discount!
-          </marquee>
-        </div>
         <h1>Book Hub</h1>
         <p>"Where every book find a new home"</p>
         <div class="find-btn">
@@ -19,7 +14,11 @@
     </div>
 
     <div class="border">
-      <hr>
+      <div>
+        <marquee behavior="scroll" direction="left" scrollamount="9">
+          *Get your book up to 70% discount!
+        </marquee>
+      </div>
     </div>
 
     <!-- cards -->
