--- a/public/css/home.css
+++ b/public/css/home.css
@@ -19,11 +19,15 @@
     position: relative;
   }
   .title {
-    color: white;
+    color: rgb(255, 255, 255);
     position: absolute;
     top: 20rem;
     left: 40%;
     text-align: center;
+  }
+
+  .title h1 {
+    color: #f5f4f8;
   }
 
   .find-btn button {
@@ -52,25 +56,37 @@
   .title {
     color: black;
     position: absolute;
-    top: 6rem;
+    top: 8rem;
     text-align: center;
-    left: 10%;
+    left: 18%;
   }
   .cards {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
+  .title h1 {
+    color: #3b238a;
+  }
+
+  .title p{
+    color: #000;
+  }
+
   .find-btn button {
-    background-color: #ff0000;
+    background-color: #333333;
     border: none;
     border-radius: 4rem;
   }
+
 }
 
-.title h1 {
-  /* padding-top: 30%; */
-  color: #fff;
+marquee{
+  background-color: rgba(255, 183, 0, 0.465);
+  padding: 10px; 
+  font-size: 1.2rem;
+  color: #ff0000;
 }
+
 
 .find-btn a {
   padding: 0.5rem 0.5rem;
