new updates on home page

--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -3,6 +3,7 @@
   <div class="home">
     <div class="home-view">
       <div class="title">
+        <iframe src="https://lottie.host/embed/75f2f71a-69b9-403b-8e98-4a49f8ea8687/30eTXNBYNp.json"></iframe>
         <h1>Book Hub</h1>
         <p>"Where every book find a new home"</p>
         <div class="find-btn">
@@ -14,20 +15,18 @@
     </div>
 
     <div class="border">
-      <div>
+      <!-- <div>
         <marquee behavior="scroll" direction="left" scrollamount="9">
-          *Get your book up to 70% discount!
+          *welcome to book hub
         </marquee>
-      </div>
+      </div> -->
     </div>
 
     <!-- cards -->
     <div class="card-container">
       <div class="cards card-1">
         <div class="card-img">
-          <img
-            src="https://media.istockphoto.com/id/1448709792/photo/profile-shot-of-a-woman-giving-a-book.jpg?s=2048x2048&w=is&k=20&c=Q63EGkzVvM6vMrZz8h3BCOU3SVSXwNfB2OCOQ9hS1R0="
-            alt="image not found" />
+          <img src="/css/what.jpg" alt="image not found" />
         </div>
         <div class="card-content">
           <h3>What is bookHub?</h3>
@@ -45,9 +44,7 @@
       </div>
       <div class="cards card-2">
         <div class="card-img">
-          <img
-            src="https://media.istockphoto.com/id/1498171824/photo/confused-man-thinking-and-why-face-in-studio-white-background-and-doubt-of-ideas-planning-and.jpg?s=2048x2048&w=is&k=20&c=3ZDX7QELHxBjy0QPZotFcOANAq1sYTXDG5r65ESTA3s="
-            alt="image not found" />
+          <img src="/css/why.png" alt="image not found" />
         </div>
         <div class="card-content">
           <h3>Why bookHub?</h3>
