--- a/public/css/home.css
+++ b/public/css/home.css
@@ -21,7 +21,7 @@
   .title {
     color: rgb(255, 255, 255);
     position: absolute;
-    top: 20rem;
+    top: 15rem;
     left: 40%;
     text-align: center;
   }
@@ -56,7 +56,7 @@
   .title {
     color: black;
     position: absolute;
-    top: 8rem;
+    /* top: 8rem; */
     text-align: center;
     left: 18%;
   }
