--- a/views/explorebooks/showBook.ejs
+++ b/views/explorebooks/showBook.ejs
@@ -7,7 +7,7 @@
     }
 
     .books-card {
-      margin-top: 9rem !important;
+      margin-top: 6rem !important;
     }
 
     .books-card img {
@@ -19,7 +19,7 @@
       margin-top: 1rem;
       background-color: rgba(215, 206, 206, 0.175) !important;
       /* text-align: cente; */
-      /* margin-left: 30%; */
+      margin-left: -10%;
     }
 
     @media only screen and (max-width: 780px) {
