--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -52,6 +52,32 @@
     flex-grow: 1;
     text-align: center;
   }
+
+  /* Custom styling for mobile view */
+  @media (max-width: 768px) {
+    .collapse {
+      position: absolute;
+      top: 100%;
+      /* Push down below the navbar */
+      right: 0;
+      /* Align to the right side of the screen */
+      background-color: #fff;
+      /* Same background as navbar */
+      box-shadow: -2px 4px 8px rgba(0, 0, 0, 0.1);
+      /* Shadow for dropdown */
+      width: 200px;
+      /* Set a width for the collapsed menu */
+      padding: 1rem;
+      /* Padding inside the collapse menu */
+      border-radius: 8px 0 8px 8px;
+      /* Rounded edges on top left and bottom corners */
+    }
+
+    .nav-item {
+      text-align: left;
+      /* Left align the text */
+    }
+  }
 </style>
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
@@ -95,7 +121,7 @@
                   <a class="nav-link" href="/logout">Log out <i class="fa-solid fa-right-from-bracket"></i></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/yourbooks">your profile<i class="fa-solid fa-user"></i></a>
+                  <a class="nav-link" href="/yourbooks">your profile <i class="fa-solid fa-user"></i></a>
                 </li>
                 <% } %>
         </ul>
