--- a/views/addbooks/add.ejs
+++ b/views/addbooks/add.ejs
@@ -1,169 +1,130 @@
 <% layout('layouts/boilerplate') -%>
-<style>
-  body {
-    background-color: #e6e6fa;
-  }
+  <style>
+    body {
+      background-color: #e6e6fa;
+    }
 
-  .form-container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    margin: 9rem 0 3rem 0 ;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
+    .form-container {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      margin: 6rem 0 3rem 0;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-  .edit-form {
-    color: #000;
-    
-  }
+    .edit-form {
+      color: #000;
 
-  .form-control {
-    background-color: #fff;
-    border: none;
-    border-bottom: 2px solid #000;
-    border-radius: 0;
-    box-shadow: none;
-    padding: 0.5rem 1rem;
-    transition: border-color 0.3s ease;
-  }
+    }
 
-  .form-control:focus {
-    border-color: #000;
-    box-shadow: none;
-    background-color: transparent;
-  }
+    .form-control {
+      background-color: #fff;
+      border: none;
+      border-bottom: 2px solid #000;
+      border-radius: 0;
+      box-shadow: none;
+      padding: 0.5rem 1rem;
+      transition: border-color 0.3s ease;
+    }
 
-  .form-control::placeholder {
-    color: #fff;
-  }
+    .form-container h3 {
+      background-color: #FA8B2D;
+      padding: 5px;
+      border-radius: 10px;
+      color: #fff;
+      text-align: center;
+    }
 
-  .invalid-feedback {
-    color: #dc3545;
-  }
+    .form-control:focus {
+      border-color: #000;
+      box-shadow: none;
+      background-color: transparent;
+    }
 
-  .btn-success {
-    background-color: #28a745;
-    border: none;
-    border-radius: 0.25rem;
-    color: #fff;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
+    .form-control::placeholder {
+      color: #fff;
+    }
 
-  .btn-success:hover {
-    background-color: #218838;
-  }
-</style>
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-8">
-      <div class="form-container">
-        <form
-          method="post"
-          action="/addbooks"
-          class="row g-3 edit-form needs-validation"
-          novalidate
-          enctype="multipart/form-data"
-        >
-          <div class="col-8 offset-2">
-            <div class="mb-3">
-              <label for="title" class="form-label">Title</label>
-              <input
-                type="text"
-                name="books[title]"
-                class="form-control"
-                id="title"
-                placeholder="Enter the title"
-                required
-              />
-              <div class="invalid-feedback">Choose a title</div>
-            </div>
-            <div class="mb-3">
-              <label for="description" class="form-label">Description</label>
-              <textarea
-                name="books[description]"
-                class="form-control"
-                id="description"
-                cols="30"
-                rows="5"
-                placeholder="Enter the description for your book"
-                required
-              ></textarea>
-              <div class="invalid-feedback">Enter a description</div>
-            </div>
-            <div class="mb-3">
-              <label for="author" class="form-label">Author</label>
-              <input
-                type="text"
-                name="books[author]"
-                placeholder="Enter the author's name"
-                class="form-control"
-                id="author"
-                required
-              />
-              <div class="invalid-feedback">Enter author's name</div>
-            </div>
-            <div class="mb-3">
-              <label for="price" class="form-label">Price</label>
-              <input
-                type="number"
-                name="books[price]"
-                placeholder="Enter price"
-                class="form-control"
-                id="price"
-                required
-              />
-              <div class="invalid-feedback">
-                Enter a price for your book
+    .invalid-feedback {
+      color: #dc3545;
+    }
+
+    .btn-success {
+      background-color: #28a745;
+      border: none;
+      border-radius: 0.25rem;
+      color: #fff;
+      padding: 0.5rem 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .btn-success:hover {
+      background-color: #218838;
+    }
+  </style>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <div class="form-container">
+          <h3>Add Your book</h3>
+          <form method="post" action="/addbooks" class="row g-3 edit-form needs-validation" novalidate
+            enctype="multipart/form-data">
+            <div class="">
+              <div class="mb-3">
+                <label for="title" class="form-label">Title</label>
+                <input type="text" name="books[title]" class="form-control" id="title" placeholder="Enter the title"
+                  required />
+                <div class="invalid-feedback">Choose a title</div>
               </div>
-            </div>
-            <div class="mb-3">
-              <label for="image" class="form-label">Image</label>
-              <input
-                type="file"
-                name="books[image]"
-                class="form-control"
-                id="image"
-                required
-              />
-              <div class="invalid-feedback">
-                Add a image
-               </div>
-            </div>
-            <div class="mb-3">
-              <label for="contact" class="form-label">Contact Number</label>
-              <input
-                type="tel"
-                name="books[contact]"
-                placeholder="Enter your contact number"
-                class="form-control"
-                id="contact"
-                required
-              />
-              <div class="invalid-feedback">
-               Enter your contact number
+              <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea name="books[description]" class="form-control" id="description" cols="30" rows="5"
+                  placeholder="Enter the description for your book" required></textarea>
+                <div class="invalid-feedback">Enter a description</div>
               </div>
+              <div class="mb-3">
+                <label for="author" class="form-label">Author</label>
+                <input type="text" name="books[author]" placeholder="Enter the author's name" class="form-control"
+                  id="author" required />
+                <div class="invalid-feedback">Enter author's name</div>
+              </div>
+              <div class="mb-3">
+                <label for="price" class="form-label">Price</label>
+                <input type="number" name="books[price]" placeholder="Enter price" class="form-control" id="price"
+                  required />
+                <div class="invalid-feedback">
+                  Enter a price for your book
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="image" class="form-label">Image</label>
+                <input type="file" name="books[image]" class="form-control" id="image" required />
+                <div class="invalid-feedback">
+                  Add a image
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="contact" class="form-label">Contact Number</label>
+                <input type="tel" name="books[contact]" placeholder="Enter your contact number" class="form-control"
+                  id="contact" required />
+                <div class="invalid-feedback">
+                  Enter your contact number
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="location" class="form-label">Location</label>
+                <input type="text" name="books[location]" placeholder="Enter your location" class="form-control"
+                  id="location" required />
+                <div class="invalid-feedback">Enter your location</div>
+              </div>
+              <button class="btn btn-danger">Submit</button>
+              <br />
+              <br />
+              <br />
             </div>
-            <div class="mb-3">
-              <label for="location" class="form-label">Location</label>
-              <input
-                type="text"
-                name="books[location]"
-                placeholder="Enter your location"
-                class="form-control"
-                id="location"
-                required
-              />
-              <div class="invalid-feedback">Enter your location</div>
-            </div>
-            <button class="btn btn-danger">Submit</button>
-            <br />
-            <br />
-            <br />
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
